# music_players

./: .env.example  .gitignore  README.md  app.py  hello.py  hello_2.py  music_search.py  pyproject.toml  resize_icons.py
extension/: content.js  manifest.json  popup.html  popup.js
templates/: index.html
